# python-starter

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yaml
app/: __main__.py  consts.py  errors.py  lifespan.py  schemas.py  settings.py  setup_events.py  utils.py
app/auth/: auth_backend.py  auth_token.py
app/db/: base.py  session_manager.py  utils.py
app/db/dao/: abstract_dao.py  event_log_dao.py  log_dao.py  logger_dao.py  post_dao.py  user_dao.py  user_manager_dao.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2025-06-26-10-03_213e8399d011.py  2025-06-26-12-50_a0110d41c3d9.py  2025-06-26-14-32_b93b22d0a66b.py  2025-06-27-12-24_d69a9f27d188.py  2025-07-02-09-17_9a93d5ad6a35.py
app/db/models/: __init__.py  abstract_model.py  event_log_model.py  log_model.py  post_model.py  timestamp_mixin.py  user_model.py
app/dependencies/: auth_dependencies.py  db.py  test_user.py  user.py  validate_query_params.py
app/prisma/: partial_types.py  schema.prisma
app/prisma/migrations/20250126150118_init/: migration.sql
app/prisma/migrations/20250308175233_/: migration.sql
app/repository/post_repository/: post_repository.py
app/repository/user/: dto.py  user_repository.py
app/repository/user_repository/: dto.py  user_repository.py
app/services/auth/: auth_service.py  dto.py  errors.py  test_auth_service.py
app/services/auth_service/: auth_service.py  dto.py  errors.py  schemas.py
app/services/email/: dto.py  service.py
app/services/error_logger/: service.py
app/services/hybrid_event_bus/: service.py
app/services/logger/: service.py
app/services/post/: dto.py  errors.py  event_handlers.py  events.py  schema.py  service.py
app/services/post_service/: dto.py  errors.py  post_service.py
app/services/user/: errors.py  schemas.py  service.py
app/static/email_tpl/: reset_password.html
app/tests/dependencies/: test_user.py
app/tests/services/: test_email_service.py  test_logger_service.py  test_post_service.py  test_user_service.py
app/tests/services/auth_service/: test_auth_service.py
app/tests/services/post_service/: test_post_service.py
app/tests/services/user/: test_service.py
app/utils/: security.py
app/web/: application.py
app/web/api/: router.py
app/web/api/auth/: __init__.py  schema.py  schemas.py  view.py  views.py
app/web/api/post/: __init__.py  schemas.py  views.py
app/web/api/user/: __init__.py  schemas.py  views.py
deploy/: docker-compose.dev.yml
static/email_tpl/: reset_password.html
